# forpy-meson-minimal

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  meson.build  meson_options.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: unit_tests.yaml
examples/: timing.py  timing_blocks.py  timing_threads.py
forpy_meson_minimal/: __init__.py  matmul.py  meson.build
forpy_meson_minimal/fortran/: __init__.py  arithmetics.f90  meson.build  parallel.f90
tests/: test_env.py  test_import.py  test_matmul.py  test_parallel.py
